2013-05-20  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xfns.c (check_x_display_info): Don't use XINT for terminal object.

2013-05-18  Paul Eggert  <eggert@cs.ucla.edu>

	Port --enable-gcc-warnings to clang.
	* bytecode.c (exec_byte_code):
	* regex.c:
	Redo diagnostic pragmas to pacify clang, too.
	* dbusbind.c (xd_retrieve_arg): Do not use uninitialized variable.
	* editfns.c (Fencode_time):
	* fileio.c (file_accessible_directory_p):
	* font.c (font_unparse_xlfd):
	Use '&"string"[index]' instead of '"string" + (index)'.
	* undo.c (user_error): Remove; unused.

2013-05-16  Eli Zaretskii  <eliz@gnu.org>

	* insdel.c (insert_1_both): Document the arguments, instead of
	referring to insert_1, which no longer exists.

	* xdisp.c (message_dolog): If the *Messages* buffer is shown in
	some window, increment windows_or_buffers_changed, so that
	*Messages* display in that window is updated.  (Bug#14408)

	* w32.c: Include epaths.h.
	(init_environment): Use cmdproxy.exe without leading directories.
	Support emacs.exe in src; point SHELL to cmdproxy in ../nt in that
	case.
	(gettimeofday): Adjust signature and return value to Posix
	expectations.

	* unexw32.c (open_output_file): Delete the existing emacs.exe
	before creating it, to break the hard link to the versioned
	executable.

	* Makefile.in (EMACS_MANIFEST, CM_OBJ, TEMACS_POST_LINK)
	(ADDSECTION, EMACS_HEAPSIZE, MINGW_TEMACS_POST_LINK)
	(FIRSTFILE_OBJ): New variables.
	(W32_RES): Rename to EMACSRES.  All users changed.
	(base_obj): Use $(CM_OBJ).
	(ALLOBJS): Use $(FIRSTFILE_OBJ).
	(emacs$(EXEEXT)): Depend on $(ADDSECTION).
	(temacs$(EXEEXT)): Use $(TEMACS_POST_LINK), and move
	$(W32_RES_LINK) before $(LIBES).
	(emacs.res): Depend on $(EMACS_MANIFEST).  Put emacs.rc in nt.

2013-05-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* makefile.w32-in (DOC): Use just "DOC".

	* Makefile.in (bootstrap-clean): DOC-* doesn't exist any more.

	* process.c: Export default filters and sentinels to Elisp.